# adraft

./: .bowerrc  .gitignore  AUTHORS.rst  CHANGELOG.md  Gruntfile.coffee  LICENSE  Makefile  README.rst  bower.json  fabfile.py  manage.py  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_test.txt  runtests.py  runtests.sh  setup.cfg  tc_tests.sh
adraft/: __init__.py  settings.py  urls.py  version.py  views.py  wsgi.py
adraft/notes/: models.py  permissions.py  urls.py  views.py
adraft/notes/migrations/: 0001_initial.py  0002_auto_20170302_1543.py
adraft/notes/templates/: note_base.html
adraft/notes/templates/notes/: attachment_detail.html  attachment_list.html  note_form.html
adraft/notes/templates/registration/: logged_out.html
adraft/notes/tests/: test_client.py  test_models.py
adraft/settings/: __init__.py  _logging.py  base.py  develop.py  local.py  prod.py  production.py  test.py
apps/notes/: .gitignore  api.py  models.py  views.py
apps/notes/migrations/: 0001_initial.py  0002_auto_20170302_1543.py
apps/notes/templates/notes/: attachment_confirm_delete.html  note_detail.html  note_edit.html  quick_ref.html
apps/notes/templates/registration/: login.html
apps/notes/tests/: test_models.py
base/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
base/migrations/: 0001_initial.py  0002_note_html.py
base/static/: .gitignore
base/templates/: _base.html  _messages.html  index.html  note_base.html
base/templates/base/: note_detail.html  note_form.html  note_list.html
base/templates/registration/: login.html
conf/: adraft_nginx.conf  adraft_uwsgi.ini
docs/: Makefile  conf.py  index.rst  make.bat
locales/ru/LC_MESSAGES/: django.mo  django.po
notes/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
notes/migrations/: 0001_initial.py
notes/templates/: _base.html
notes/templates/notes/: attachment_form.html  note_detail.html  note_form.html  note_list.html
notes/tests/: conftest.py  draft.py  test_models.py
requirements/: dev.txt  prod.txt  test.txt
static/css/: adraft.css
tests/: conftest.py
tests/coverage/: test_samplec.py
utils/: __init__.py  utils.py
